<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Control Diabètic</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correu electrònic</string>
    <string name="prompt_password">Contrasenya</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrarse">Registrar-se</string>
    <string name="guardarUsuari">Mantenir connectat</string>
    <string name="recordarContrasenya">Has oblidat la contrasenya?</string>
    <string name="recuperarContrasenya">Recupera-la</string>
    <string name="titolrecuperarContrasenya">Recuperar contrasenya</string>
    <string name="textRecuperarContrasenya">Introdueix el correu electrònic a recuperar</string>
    <string name="sharedControlAlarmes">sharedControlAlarmes</string>

    <!-- Strings related to registre -->
    <string name="personalData">Dades personals</string>
    <string name="loginNom">Nom *</string>
    <string name="loginCognom">Primer Cognom *</string>
    <string name="loginCognom2">Segon Cognom *</string>
    <string name="loginBirthday">Data naixement *</string>
    <string name="titolGenere">Gènere *</string>
    <string-array name="genere">
        <item>Selecciona</item>
        <item>Home</item>
        <item>Dona</item>
        <item>Altres</item>
    </string-array>
    <string name="loginHeight">Alçada *</string>
    <string name="mesuraPes">Kg</string>
    <string name="loginWeight">Pes *</string>
    <string name="mesuraAltura">Cm</string>
    <string name="loginEmail">Correu electrònic *</string>
    <string name="loginPassword">Contrasenya *</string>
    <string name="continuarRegistre">Continuar</string>
    <string name="crearCompte">Crear compte</string>
    <string name="tornar">Tornar</string>
    <string name="titolRegistre">Registre</string>

    <string name="medicalData">Dades mèdiques</string>
    <string name="loginMedicalCenter">Nom del centre *</string>
    <string name="loginPoblacioMedicalCenter">Població del centre *</string>
    <string name="loginDoctor">Nom del metge *</string>
    <string name="loginEmailMedicalCenter">Correu electrònic del metge *</string>
    <string name="titolTipusDiabetis">Tipus diabetis</string>
    <string-array name="loginDiabetesType">
        <item>Selecciona</item>
        <item>Tipus 1</item>
        <item>Tipus 2</item>
        <item>Gestacional</item>
        <item>LADA o Tipus 1.5</item>
        <item>MODY</item>
        <item>Secundària</item>
        <item>Sense diagnòsis</item>
    </string-array>
    <string name="loginDiagnosisDate">Data diagnosi *</string>
    <string name="glucosaData" tools:ignore="StringEscaping">Dades glucosa - Els valors entre parèntesis són estàndars, que s\'utilitzaran en cas de no introduir-ne cap.</string>
    <string name="glucosaDataInfo" tools:ignore="StringEscaping">Dades glucosa</string>
    <string name="mesuraGlucosa">mg/dL</string>
    <string name="mesuraInsulina">ui</string>
    <string name="glucosaMoltBaixa">Molt baixa (54)</string>
    <string name="glucosaBaixa">Baixa (80)</string>
    <string name="glucosaBaixaDespresApat" tools:ignore="StringEscaping">Baixa després d\'un àpat (120)</string>
    <string name="glucosaMoltAlta">Molt alta (250)</string>
    <string name="glucosaAlta">Alta (130)</string>
    <string name="glucosaAltaDespresApat" tools:ignore="StringEscaping">Alta després d\'un àpat (180)</string>

    <string name="textRegistreFeedback">Registre realitzat.</string>
    <string name="textRegistreFeedback2" tools:ignore="StringEscaping">S\'ha enviat un mail de confirmació al correu introduït.</string>

    <string name="guardar">Guardar</string>
    <string name="modificar">Modificar</string>
    <string name="cancelar">Cancelar</string>
    <string name="filtrar">Filtrar</string>
    <string name="enviar">Enviar</string>

    <!-- Strings related to Controls -->
    <string name="ultimControlGlucosa">Últim control\nde glucosa</string>
    <string name="ultimControlInsulina">Últim control\nd\'insulina</string>
    <string name="literalGlucosa">Glucosa</string>
    <string name="literalGlucosaPunts">Glucosa:</string>
    <string name="historic">Històric</string>
    <string name="ahir">Ahir</string>
    <string name="setmana">Setmana</string>
    <string name="mes">Últims 30 dies</string>
    <string name="afegirControl">Afegir control</string>
    <string name="titolMitjanes">Mitjanes de glucosa</string>
    <string name="titolSenseControls">No hi ha cap control introduït</string>
    <string name="titolSenseControlsFiltrats">No hi ha cap control filtrat</string>
    <string name="titolControls">Controls</string>

    <string name="titolAfegirControl">Introduir nou Control</string>
    <string name="hora">Hora: </string>
    <string name="selecciona">Selecciona</string>
    <string name="dia">Dia: </string>
    <string name="literalInsulina">Insulina</string>
    <string name="esDespresDapat" tools:ignore="StringEscaping">És després d\'un àpat</string>
    <string name="dataFiltreInici">Data Inici: </string>
    <string name="dataFiltreFi">Data Fi: </string>

    <!-- Strings related to modificar dades -->
    <string name="nom">Nom: </string>
    <string name="cognom">Primer cognom: </string>
    <string name="cognom2">Segon cognom: </string>
    <string name="dataNaixement">Data naixement: </string>
    <string name="genere">Gènere: </string>
    <string name="pes">Pes: </string>
    <string name="altura">Alçada: </string>
    <string name="correuElectronic">Correu electrònic: </string>
    <string name="contrasenya">Contrasenya: </string>
    <string name="modificarContrasenya">Modificar</string>
    <string name="modificarDadesPers">Modificar dades personals</string>
    <string name="modificarAlarma">Modificar alarma</string>
    <string name="modificarControl">Modificar control</string>
    <string name="enviarHistoric">Enviar històric de controls</string>
    <string name="botoEnviarHistoric">Enviar històric</string>
    <string name="confirmarModificar">Modificar</string>
    <string name="modificarDadesMed">Modificar dades mèdiques</string>
    <string name="titolModificarDadesPer">Modificar dades personals</string>
    <string name="titolModificarDadesMed">Modificar dades mèdiques</string>
    <string name="tancarSessio">Tancar Sessió</string>

    <string name="titolModificarPassword">Modificar la contrasenya</string>
    <string name="confirmarModificarContrasenya">Confirmar modificar contrasenya</string>
    <string name="contrasenyaAntiga">Contrasenya actual *</string>
    <string name="contrasenyaNova">Contrasenya nova *</string>
    <string name="contrasenyaNovaConfirmar">Confirmar contrasenya nova *</string>

    <string name="nomDelCentre">Nom del centre: </string>
    <string name="nomPoblacio">Població del centre: </string>
    <string name="nomDelMetge">Nom del metge: </string>
    <string name="correuElectronicMetge">Correu electrònic metge:</string>
    <string name="dataDiagnosi">Data diagnosi:</string>
    <string name="titolGlucosaBaixa">Baixa: </string>
    <string name="titolGlucosaAlta">Alta: </string>
    <string name="titolGlucosaMoltBaixa">Molt Baixa: </string>
    <string name="titolGlucosaMoltAlta">Molt Alta: </string>
    <string name="titolGlucosaDABaixa">Baixa després d\'àpat: </string>
    <string name="titolGlucosaDAAlta">Alta després d\'àpat: </string>


    <string name="titolHistoricControls">Històric de controls</string>

    <!-- Strings related to alarmes -->
    <string name="afegirAlarma">Afegir alarma</string>
    <string name="titolAlarmes">Alarmes</string>
    <string name="titolSenseAlarmes">No hi ha cap alarma introduida</string>
    <string name="titolAfegirAlarma">Introduir nova Alarma</string>


    <!-- Strings related to Visites -->
    <string name="afegirVisita">Afegir visita</string>
    <string name="titolVisites">Visites</string>
    <string name="titolProximaVisita">Pròxima visita</string>
    <string name="titolSenseProximaVisita">Sense visita programada</string>
    <string name="titolVisitesPasades">Visites passades</string>
    <string name="titolAfegirVisita">Introduir nova Visita</string>
    <string name="motiuVisita">Motiu: </string>
    <string name="motiuPerDefecte">El motiu per defecte és: \"Control\" </string>
    <string name="titolSenseVisites">No hi ha cap visita realitzada</string>
    <string name="titolModificarVisita">Modificar Visita</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Notificacions d'alarma -->
    <string name="new_notification">Alarma programada - clica per Afegir nou control</string>

    <!-- Enviar mail -->
    <string name="mailAEnviar">Escriu el correu electrònic a enviar</string>
    <string name="mailAEnviarexplicacio">S\'enviaran al correu introduït, els controls filtrats en la pantalla anterior. Premeu enviar per continuar.</string>

</resources>