<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.ismasoft.controldiabetic.viewModel.RegistreViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonRegister">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                tools:context=".ui.activities.RegistreActivity2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicalData"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/loginMedicalCenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="6dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/loginMedicalCenter" />

                <EditText
                    android:id="@+id/loginDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="6dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/loginDoctor" />

                <EditText
                    android:id="@+id/loginEmailMedicalCenter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="6dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/loginEmailMedicalCenter" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/crearCompte"
            app:backgroundTint="#00BCD4" />
    </RelativeLayout>

</layout>