<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ismasoft.controldiabetic.viewModel.PerfilViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                tools:context=".ui.activities.ModificarPasswordActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/textRecuperarContrasenya"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/contrasenyaAntiga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/contrasenyaAntiga"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/contrasenyaNova"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/contrasenyaNova"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/contrasenyaNovaConfirmar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/contrasenyaNovaConfirmar"
                    android:inputType="textPassword" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/linearLayoutmodificarVisita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp">
            <Button
                android:id="@+id/buttonRecuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/modificar"
                app:backgroundTint="@color/colorPrimary" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
            <Button
                android:id="@+id/cancelarModificarContrasenya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cancelar"
                app:backgroundTint="@color/colorPrimary" />
        </LinearLayout>

    </RelativeLayout>

</layout>